Improved comments; shorthanded "padding"; fixed the scrollbar appearing in Firefox

--- a/src/views/styles/popup.css
+++ b/src/views/styles/popup.css
@@ -1,10 +1,10 @@
 body {
   font-family: Roboto, sans-serif;
   width: 250px;
-  padding: 16px;
-  padding-bottom: 4px;
+  padding: 16px 16px 4px;
   font-size: 1rem;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 /* Necessary to not keep any whitespace in the bottom part of the popup */
@@ -13,15 +13,19 @@ body {
   height: unset;
 }
 
+/* Correcting the line height */
+
 .extension-popup body {
   line-height: 1.2;
 }
+
+/* Part of the RTL support */
 
 .i18n--rtl {
   direction: rtl;
 }
 
-/* subheader */
+/* Subheader */
 
 .subheader {
   color: #194197;
@@ -32,7 +36,7 @@ body {
   margin-top: 10px;
 }
 
-/* list overrides */
+/* List overrides */
 
 .extension-popup .s-list {
   margin: 0 -16px;
@@ -48,7 +52,7 @@ body {
   direction: rtl;
 }
 
-/* slider overrides */
+/* Slider overrides */
 
 .i18n--rtl .s-slider__connects::before {
   left: 0;
@@ -59,7 +63,7 @@ body {
   margin-right: 0 !important;
 }
 
-/* switch overrides */
+/* Switch overrides */
 
 .s-switch {
   margin-top: 8px !important;
@@ -86,7 +90,7 @@ body {
   margin-right: 8px;
 }
 
-/* usability */
+/* Accessibility */
 
 @media (prefers-reduced-motion: reduce) {
   *,
@@ -100,4 +104,9 @@ body {
 /* hide scrollbar */
 ::-webkit-scrollbar {
   display: none;
+}
+
+/* For Firefox */
+html {
+  scrollbar-width: none;
 }
